--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@
                 <div class="contact-info">
                     <h2>¿Listo/a para dar más sentido a tu vida?</h2>
                     <p class="contact-description">
-                        Comienza una terapia para avanzar hacia tus objetivos
+                        Contacta conmigo para avanzar hacia tus objetivos
                     </p>
                     <div class="contact-item">
                         <div class="contact-icon"><span>📧</span></div>
