--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agathe Primault - PsicÃ³loga Sanitaria | Terapia Individual y Parejas</title>
-    <meta name="description" content="PsicÃ³loga Sanitaria especializada en terapia contextual-comportamental. AcompaÃ±amiento terapÃ©utico para adolescentes, adultos y parejas">
+    <title>Agathe Primault - Psicóloga Sanitaria | Terapia Individual y Parejas</title>
+    <meta name="description" content="Psicóloga Sanitaria especializada en terapia contextual-comportamental. Acompañamiento terapéutico para adolescentes, adultos y parejas">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         * {
