--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@
                     </div>
                 </div>
                 
-                <form class="contact-form" id="contactForm">
+                <form action="https://formspree.io/f/xdklkrnv" method="POST" class="contact-form" id="contactForm">
                     <div class="form-intro">
                         <p>Este formulario es un primer paso, sencillo y <strong>confidencial</strong>.</p>
                         <p>Puedes contarme lo que te está pasando o lo que necesitas. Yo leeré tu mensaje personalmente y te responderé lo antes posible. No hace falta que lo expliques todo ni que sepas por dónde empezar: estoy para acompañarte.</p>
@@ -1448,3 +1448,4 @@
     </script>
 </body>
 </html>
+            
