--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,8 @@
                         <div class="contact-details">
                             <h4>Teléfono / WhatsApp</h4>
                             <p>+34 644 57 41 79</p>
-                            <a href="https://wa.me/‪644574179" target="_blank" style="color: #25d366; text-decoration: none; font-weight: 600; margin-top: 5px; display: inline-block;">
+                            <a href="https://wa.me/34644574179?text=Hola%2C%20he%20visto%20tu%20p%C3%A1gina%20web%20y%20me%20gustar%C3%ADa%20obtener%20m%C3%A1s%20informaci%C3%B3n%20sobre%20tus%20servicios%20de%20psicolog%C3%ADa." target="_blank" style="color: #25d366; text-decoration: none; font-weight: 600; margin-top: 5px; display: inline-block;">
+
                                 📱 Escribir por WhatsApp
                             </a>
                         </div>
