--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,8 @@
     </footer>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/‪644574179" target="_blank" class="whatsapp-button" title="Contactar por WhatsApp">
+    <a href="https://wa.me/34644574179?text=Hola%2C%20he%20visto%20tu%20p%C3%A1gina%20web%20y%20me%20gustar%C3%ADa%20obtener%20m%C3%A1s%20informaci%C3%B3n%20sobre%20tus%20servicios%20de%20psicolog%C3%ADa." target="_blank" class="whatsapp-button" title="Contactar por WhatsApp">
+
         <i class="fa fa-whatsapp"></i>
     </a>
 
