--- a/index.html
+++ b/index.html
@@ -1219,14 +1219,12 @@
                     <div class="contact-item">
                         <div class="contact-icon"><span>📧</span></div>
                         <div class="contact-details">
-                            <h4>Email</h4>
                             <p>agathepsicologia@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><span>📞</span></div>
                         <div class="contact-details">
-                            <h4>Teléfono / WhatsApp</h4>
                             <p>+34 644 57 41 79</p>
                             <a href="https://wa.me/34644574179?text=Hola%2C%20he%20visto%20tu%20p%C3%A1gina%20web%20y%20me%20gustar%C3%ADa%20obtener%20m%C3%A1s%20informaci%C3%B3n%20sobre%20tus%20servicios%20de%20psicolog%C3%ADa." target="_blank" style="color: #25d366; text-decoration: none; font-weight: 600; margin-top: 5px; display: inline-block;">
 
@@ -1237,8 +1235,7 @@
                     <div class="contact-item">
                         <div class="contact-icon"><span>📍</span></div>
                         <div class="contact-details">
-                            <h4>Modalidad</h4>
-                            <p>Online y en mi consulta de Madrid</p>
+                            <p>Tú eliges: desde la comodidad de tu hogar en formato online o en mi consulta de Madrid.</p>
                         </div>
                     </div>
                 </div>
